# moltbox-gateway

./: .gitignore  ASSUMPTIONS.md  Dockerfile  HANDOFF.md  README.md  go.mod  pyproject.toml
deploy/: README.md  (+1 more)
moltbox-cli/: pyproject.toml
moltbox-cli/host/: README.md
moltbox-cli/host/commands/deploy/: deploy-target.py  render-assets.py
moltbox-cli/host/commands/shared/: inspect-target.py  tail-target-logs.py
moltbox-cli/host/commands/snapshot/: restore-target-snapshot.py  snapshot-target.py
moltbox-cli/host/commands/stack/: start-target.py
moltbox-cli/host/commands/validate/: validate-target.py
moltbox-cli/host/diagnostics/: README.md
moltbox-cli/host/tests/: test_host_domain.py
moltbox-cli/runtime/: README.md
moltbox-cli/runtime/commands/runtime/: chat-runtime.py
moltbox-cli/runtime/commands/stack/: restart-runtime.py  start-runtime.py  stop-runtime.py
moltbox-cli/runtime/diagnostics/: README.md
moltbox-cli/runtime/tests/: test_runtime_domain.py
moltbox-cli/tools/diagnostics/: README.md
moltbox-cli/tools/src/moltbox_cli/: cli.py  config.py  deployment_assets.py  deployment_service.py  errors.py  health.py  host_tool_cli.py  http_app.py  layout.py  log_paths.py  logging_setup.py  mcp_adapter.py  mcp_server.py  primitive_runner.py  primitives.py  registry_bootstrap.py  registry_store.py  service.py  target_resolution.py
moltbox-cli/tools/src/moltbox_cli/commands/: rollback.py  runtime.py
moltbox-cli/tools/tests/: test_deployment_assets.py  test_host_tool_cli.py  test_mcp_policy.py  test_tools_cli.py  test_tools_health.py
(+269 files in other folders)
