[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moltbox-cli"
version = "0.2.0"
description = "MoltBox CLI tooling for runtime, host, and tools domains."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6,<7",
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "mcp[cli]>=1.0,<2",
]

[project.scripts]
moltbox = "moltbox_cli.__main__:main"
moltbox-mcp = "moltbox_cli.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "tools/src"}

[tool.setuptools.packages.find]
where = ["tools/src"]
